--- a/style.css
+++ b/style.css
@@ -1,13 +1,42 @@
-
+* {
+	box-sizing: border-box;
+}
+html,
+body {
+	font-family: sans-serif;
+	width: 100%;
+	height: 100%;
+	background-color: #202327;
+	color: #EEE;
+	padding: 10px;
+	margin: 0;
+}
 .flex-row {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: row;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
 }
 .flex-column {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 }
 .flex-inline {
+	display: -webkit-inline-box;
+	display: -webkit-inline-flex;
+	display: -ms-inline-flexbox;
 	display: inline-flex;
 }
 .flex-row,
@@ -16,15 +45,86 @@
 	margin: 0;
 }
 .flex {
-	flex: 1;
+	-webkit-box-flex: 1;
+	-webkit-flex: 1;
+	    -ms-flex: 1;
+	        flex: 1;
 }
 
-
-div > ul {
-	flex-basis: 50%;
+.wl-whiplink {
+	background: #ffffff;
+	background: rgba(255, 255, 255, 0.6);
 }
-
-.function-container {
-	padding: 10px;
+.pure-function-container {
+	background-color: #51535F;
+	padding: 0 0 3px;
 	border: solid 1px black;
+	border-radius: 3px
+}
+.pure-function-container header {
+	background-color: #61636F;
+	padding: 3px 0;
+	margin-bottom: 3px;
+	border-radius: 3px 3px 0 0;
+}
+.pure-function-container header output {
+	font-size: 14px;
+	font-weight: bold;
+	text-align: center;
+}
+.pure-function-container ul {
+	-webkit-flex-basis: 50%;
+	    -ms-flex-preferred-size: 50%;
+	        flex-basis: 50%;
+}
+.pure-function-container ul li {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	margin: 1px 0;
+}
+.pure-function-container ul li .name {
+	-webkit-box-flex: 1;
+	-webkit-flex: 1;
+	    -ms-flex: 1;
+	        flex: 1;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	font-size: 12px;
+	padding: 0 10px;
+}
+.pure-function-container ul li .name.right {
+	text-align: right;
+}
+.pure-function-container ul li .value {
+	width: 50px;
+}
+.pure-function-container ul li whiplinkerNode {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	width: 10px;
+}
+.pure-function-container ul li whiplinkerNode[type=target] {}
+.pure-function-container ul li whiplinkerNode[type=target] input {
+	margin: 0 0 0 -10px;
+}
+.pure-function-container ul li whiplinkerNode[type=source] {}
+.pure-function-container ul li whiplinkerNode[type=source] input {
+	margin: 0 -10px 0 0;
 }
