--- a/style.css
+++ b/style.css
@@ -62,6 +62,14 @@ body {
 	border-radius: 3px
 }
 .pure-function-container header {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	background-color: #61636F;
 	padding: 3px 0;
 	margin-bottom: 3px;
@@ -71,6 +79,20 @@ body {
 	font-size: 14px;
 	font-weight: bold;
 	text-align: center;
+}
+.pure-function-container header button {
+	width: 12px;
+	height: 12px;
+	background-color: #D00;
+	padding: 0;
+	margin: 0 3px;
+	border: solid 1px #000000;
+	border: solid 1px rgba(0,0,0,.5);
+	border-radius: 50%;
+	opacity: .25;
+}
+.pure-function-container header button:hover {
+	opacity: .75;
 }
 .pure-function-container ul {
 	-webkit-flex-basis: 50%;
@@ -94,8 +116,6 @@ body {
 	    -ms-flex: 1;
 	        flex: 1;
 	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
 	font-size: 12px;
 	padding: 0 10px;
 }
@@ -104,6 +124,9 @@ body {
 }
 .pure-function-container ul li .value {
 	width: 50px;
+}
+.pure-function-container ul li .value input {
+	width: 100%;
 }
 .pure-function-container ul li whiplinkerNode {
 	display: -webkit-box;
@@ -127,4 +150,9 @@ body {
 .pure-function-container ul li whiplinkerNode[type=source] {}
 .pure-function-container ul li whiplinkerNode[type=source] input {
 	margin: 0 -10px 0 0;
+}
+.pure-function-container figure {
+	text-align: center;
+	padding: 3px 3px 0;
+	margin: 0;
 }
