--- a/style.pcss
+++ b/style.pcss
@@ -48,6 +48,8 @@ body {
 	border-radius: 3px;
 	
 	& header {
+		display: flex;
+		align-items: center;
 		background-color: #61636F;
 		padding: 3px 0;
 		margin-bottom: 3px;
@@ -57,6 +59,20 @@ body {
 			font-size: 14px;
 			font-weight: bold;
 			text-align: center;
+		}
+		& button {
+			width: 12px;
+			height: 12px;
+			background-color: #D00;
+			padding: 0;
+			margin: 0 3px;
+			border: solid 1px rgba(0,0,0,.5);
+			border-radius: 50%;
+			opacity: .25;
+			
+			&:hover {
+				opacity: .75;
+			}
 		}
 	}
 	& ul {
@@ -70,8 +86,6 @@ body {
 			& .name {
 				flex: 1;
 				white-space: nowrap;
-				text-overflow: ellipsis;
-				overflow: hidden;
 				font-size: 12px;
 				padding: 0 10px;
 				
@@ -81,6 +95,10 @@ body {
 			}
 			& .value {
 				width: 50px;
+				
+				& input {
+					width: 100%;
+				}
 			}
 			& whiplinkerNode {
 				display: flex;
@@ -100,5 +118,10 @@ body {
 				}
 			}
 		}
+	}
+	& figure {
+		text-align: center;
+		padding: 3px 3px 0;
+		margin: 0;
 	}
 }
