--- a/style.css
+++ b/style.css
@@ -3,13 +3,16 @@
 }
 html,
 body {
-	font-family: sans-serif;
 	width: 100%;
 	height: 100%;
+	padding: 0;
+	margin: 0;
+}
+body {
 	background-color: #202327;
 	color: #EEE;
+	font-family: sans-serif;
 	padding: 10px;
-	margin: 0;
 }
 .flex-row {
 	display: -webkit-box;
@@ -50,18 +53,22 @@ body {
 	    -ms-flex: 1;
 	        flex: 1;
 }
+.bg-primary {
+	background-color: #51535F;
+}
 
 .wl-whiplink {
 	background: #ffffff;
 	background: rgba(255, 255, 255, 0.6);
 }
-.pure-function-container {
+.pf-component {
+	position: absolute;
 	background-color: #51535F;
 	padding: 0 0 3px;
 	border: solid 1px black;
 	border-radius: 3px
 }
-.pure-function-container header {
+.pf-component header {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -ms-flexbox;
@@ -75,12 +82,12 @@ body {
 	margin-bottom: 3px;
 	border-radius: 3px 3px 0 0;
 }
-.pure-function-container header output {
+.pf-component header output {
 	font-size: 14px;
 	font-weight: bold;
 	text-align: center;
 }
-.pure-function-container header button {
+.pf-component header button {
 	width: 12px;
 	height: 12px;
 	background-color: #D00;
@@ -91,15 +98,15 @@ body {
 	border-radius: 50%;
 	opacity: .25;
 }
-.pure-function-container header button:hover {
+.pf-component header button:hover {
 	opacity: .75;
 }
-.pure-function-container ul {
+.pf-component ul {
 	-webkit-flex-basis: 50%;
 	    -ms-flex-preferred-size: 50%;
 	        flex-basis: 50%;
 }
-.pure-function-container ul li {
+.pf-component ul li {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -ms-flexbox;
@@ -110,7 +117,7 @@ body {
 	        align-items: center;
 	margin: 1px 0;
 }
-.pure-function-container ul li .name {
+.pf-component ul li .name {
 	-webkit-box-flex: 1;
 	-webkit-flex: 1;
 	    -ms-flex: 1;
@@ -119,16 +126,16 @@ body {
 	font-size: 12px;
 	padding: 0 10px;
 }
-.pure-function-container ul li .name.right {
+.pf-component ul li .name.right {
 	text-align: right;
 }
-.pure-function-container ul li .value {
+.pf-component ul li .value {
 	width: 50px;
 }
-.pure-function-container ul li .value input {
+.pf-component ul li .value input {
 	width: 100%;
 }
-.pure-function-container ul li whiplinkerNode {
+.pf-component ul li whiplinkerNode {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -ms-flexbox;
@@ -143,15 +150,15 @@ body {
 	        align-items: center;
 	width: 10px;
 }
-.pure-function-container ul li whiplinkerNode[type=target] {}
-.pure-function-container ul li whiplinkerNode[type=target] input {
+.pf-component ul li whiplinkerNode[type=target] {}
+.pf-component ul li whiplinkerNode[type=target] input {
 	margin: 0 0 0 -10px;
 }
-.pure-function-container ul li whiplinkerNode[type=source] {}
-.pure-function-container ul li whiplinkerNode[type=source] input {
+.pf-component ul li whiplinkerNode[type=source] {}
+.pf-component ul li whiplinkerNode[type=source] input {
 	margin: 0 -10px 0 0;
 }
-.pure-function-container figure {
+.pf-component figure {
 	text-align: center;
 	padding: 3px 3px 0;
 	margin: 0;
