--- a/style.pcss
+++ b/style.pcss
@@ -107,7 +107,7 @@ body {
 					width: 100%;
 				}
 			}
-			& whiplinkerNode {
+			& whiplinker-node {
 				display: flex;
 				justify-content: center;
 				align-items: center;
