--- a/style.css
+++ b/style.css
@@ -15,30 +15,18 @@ body {
 	padding: 10px;
 }
 .flex-row {
-	display: -webkit-box;
-	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: row;
-	    -ms-flex-direction: row;
-	        flex-direction: row;
+	-ms-flex-direction: row;
+	    flex-direction: row;
 }
 .flex-column {
-	display: -webkit-box;
-	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: column;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+	-ms-flex-direction: column;
+	    flex-direction: column;
 }
 .flex-inline {
-	display: -webkit-inline-box;
-	display: -webkit-inline-flex;
 	display: -ms-inline-flexbox;
 	display: inline-flex;
 }
@@ -48,10 +36,8 @@ body {
 	margin: 0;
 }
 .flex {
-	-webkit-box-flex: 1;
-	-webkit-flex: 1;
-	    -ms-flex: 1;
-	        flex: 1;
+	-ms-flex: 1;
+	    flex: 1;
 }
 .bg-primary {
 	background-color: #51535F;
@@ -68,14 +54,10 @@ body {
 	border-radius: 3px
 }
 .pf-component header {
-	display: -webkit-box;
-	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	-ms-flex-align: center;
+	    align-items: center;
 	background-color: #61636F;
 	padding: 3px 0;
 	margin-bottom: 3px;
@@ -92,7 +74,7 @@ body {
 	background-color: #D00;
 	padding: 0;
 	margin: 0 3px;
-	border: solid 1px rgba(0,0,0,.5);
+	border: solid 1px rgba(0, 0, 0, .5);
 	border-radius: 50%;
 	opacity: .25;
 }
@@ -100,26 +82,19 @@ body {
 	opacity: .75;
 }
 .pf-component ul {
-	-webkit-flex-basis: 50%;
-	    -ms-flex-preferred-size: 50%;
-	        flex-basis: 50%;
+	-ms-flex-preferred-size: 50%;
+	    flex-basis: 50%;
 }
 .pf-component ul li {
-	display: -webkit-box;
-	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	-ms-flex-align: center;
+	    align-items: center;
 	margin: 1px 0;
 }
 .pf-component ul li .name {
-	-webkit-box-flex: 1;
-	-webkit-flex: 1;
-	    -ms-flex: 1;
-	        flex: 1;
+	-ms-flex: 1;
+	    flex: 1;
 	white-space: nowrap;
 	font-size: 12px;
 	padding: 0 10px;
@@ -134,18 +109,12 @@ body {
 	width: 100%;
 }
 .pf-component ul li whiplinker-node {
-	display: -webkit-box;
-	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-pack: center;
-	-webkit-justify-content: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	-ms-flex-pack: center;
+	    justify-content: center;
+	-ms-flex-align: center;
+	    align-items: center;
 	width: 10px;
 }
 .pf-component ul li whiplinker-node[type=target] {}
